crates/laplace-macro/tests/ui/fail/model_warns_on_unmodeled_condvar.stderr
error: use of deprecated constant `laplace_rt::unmodeled::CONDVAR`: #[laplace::model]: `Condvar` is not modeled; the verifier cannot observe waits/notifications here — this path is a verification blind spot
  --> tests/ui/fail/model_warns_on_unmodeled_condvar.rs:13:1
   |
13 | #[laplace_macro::model]
   | ^^^^^^^^^^^^^^^^^^^^^^^
   |
note: the lint level is defined here
  --> tests/ui/fail/model_warns_on_unmodeled_condvar.rs:8:9
   |
8  | #![deny(deprecated)]
   |         ^^^^^^^^^^
   = note: this error originates in the attribute macro `laplace_macro::model` (in Nightly builds, run with -Z macro-backtrace for more info)
